style:modal overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ input:focus {
   min-width: 100vw;
 }
 .event-modal {
+  max-width: 90vw;
   position: absolute;
   top: 50%;
   left: 50%;
